packages/components/src/css/component/TreeViewSelect.module.scss
@use '~flux/components/css/mixin';

.treeViewSelectValue {
    margin-left: 6px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.treeViewSelectList {
    display: flex;
    flex-flow: column;
    padding: 9px;
}

.treeViewSelectEmpty {
    padding: 12px 6px;
    color: var(--foreground-secondary);
    font-size: 14px;
    text-align: center;
}

.treeNode {
    composes: treeNode from './primitive/TreeNode.module.scss';

    &.isSelectable,
    &.isExpandable {
        cursor: pointer;

        @include mixin.hover {
            background: var(--surface-hover);
        }
    }

    &.isSelected {
        background: var(--primary-50);
        color: var(--primary-700);
        font-weight: 600;
    }

    &.isSelected.isSelectable {
        @include mixin.hover {
            background: var(--primary-100);
        }
    }

    &.isHighlighted:not(.isSelected) {
        background: var(--surface-hover);
    }

    &.isHighlighted.isSelected {
        background: var(--primary-100);
    }
}

.treeNodeCheck {
    color: var(--primary-600);
    flex-shrink: 0;
}

